style(ActiveCallPanel): fix spliced scrollbar issue (#664)

--- a/src/components/ConferencePanel/styles.scss
+++ b/src/components/ConferencePanel/styles.scss
@@ -1,5 +1,6 @@
 @import '../../lib/commonStyles/colors';
 @import '../../lib/commonStyles/fonts';
+@import '../../lib/commonStyles/layout';
 
 .container {
   height: 100%;
@@ -95,14 +96,13 @@
 }
 
 .selectNumberPage {
-
   .dialInNumberList {
     position: absolute;
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    height: calc(100% - #{$header-height});
     overflow: auto;
-    padding: 15px 20px 55px;
+    padding: 15px 20px;
   }
 }
 ul.dialInNumberList {
